[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "option_pricing"
version = "0.1.0"
description = "Quantitative finance option pricer"
authors = [{name = "Cameron Ramsey", email = "cameronramsey04@gmail.com"}]
dependencies = []

[tool.setuptools.packages.find]
include = ["core", "models", "derivatives"]